--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "sanity": "^3.14.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@portabletext/react": "^3.0.4"
   }
 }
