--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.3",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
