--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@portabletext/react": "^3.0.4"
+    "@portabletext/react": "^3.0.4",
+    "next-sanity-image": "^6.1.0"
   }
 }
