--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/refractor": "^3.0.2",
     "@vercel/analytics": "^1.0.1",
     "next-sanity-image": "^6.1.0",
+    "next-themes": "^0.2.1",
     "react-refractor": "^2.1.7"
   }
 }
