--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "^13.4.19",
     "framer-motion": "^10.16.0",
-    "next": "13.4.12",
+    "next": "^13.4.19",
     "next-sanity": "^5.1.2",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "sanity": "^3.14.3",
     "tailwindcss": "3.3.3",
