--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "^13.4.19",
     "framer-motion": "^10.16.0",
-    "next": "^13.4.19",
+    "next": "^13.4.20-canary.0",
     "next-sanity": "^5.1.2",
     "postcss": "8.4.27",
     "react": "^18.2.0",
