remove umami tracking id

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_SANITY_PROJECT_ID=
 NEXT_PUBLIC_SANITY_DATASET= 
 NEXT_PUBLIC_SANITY_API_VERSION=2023-07-21
 NEXT_PUBLIC_SANITY_ACCESS_TOKEN=
+NEXT_PUBLIC_UMAMI_WEBSITE_ID=
