:arrow_down_small: bump nextjs up to v14.0.2

--- a/package.json
+++ b/package.json
@@ -8,28 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^6.7.0",
     "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.14.3",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.15",
+    "@sanity/vision": "^3.19.3",
+    "@types/node": "20.5.0",
+    "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "10.4.15",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "eslint-config-next": "^14.0.2",
     "framer-motion": "^10.16.0",
-    "next": "13.4.12",
-    "next-sanity": "^5.1.2",
-    "postcss": "8.4.27",
+    "next": "^14.0.2",
+    "next-sanity": "^6.0.1",
+    "postcss": "8.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "sanity": "^3.14.3",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@portabletext/react": "^3.0.4",
+    "@portabletext/react": "^3.0.11",
     "@types/refractor": "^3.0.2",
     "@vercel/analytics": "^1.0.1",
     "next-sanity-image": "^6.1.0",
