--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NEXT_PUBLIC_SANITY_DATASET=
 NEXT_PUBLIC_SANITY_API_VERSION=2023-07-21
 NEXT_PUBLIC_SANITY_ACCESS_TOKEN=
 NEXT_PUBLIC_UMAMI_WEBSITE_ID=
+NEXT_PUBLIC_GISCUS_REPO=
+NEXT_PUBLIC_GISCUS_REPOID=
+NEXT_PUBLIC_GISCUS_CATEGORYID=
