--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@giscus/react": "^2.3.0",
     "@sanity/client": "^6.7.0",
     "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
