:zap: set-up on-demand revalidation

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_UMAMI_WEBSITE_ID=
 NEXT_PUBLIC_GISCUS_REPO=
 NEXT_PUBLIC_GISCUS_REPOID=
 NEXT_PUBLIC_GISCUS_CATEGORYID=
+NEXT_PUBLIC_SANITY_HOOK_SECRET=
