:bar_chart: implement github contribution graph
closes #85

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ NEXT_PUBLIC_GISCUS_REPO=
 NEXT_PUBLIC_GISCUS_REPOID=
 NEXT_PUBLIC_GISCUS_CATEGORYID=
 NEXT_PUBLIC_SANITY_HOOK_SECRET=
+# GitHub Contribution Graph Details
+NEXT_PUBLIC_GITHUB_USERNAME="your-github-username"
+NEXT_PUBLIC_GITHUB_JOIN_YEAR="year-you-joined-github"
