--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.1.5",
     "react-icons": "^4.10.1",
     "sanity": "^3.23.4",
     "sharp": "^0.32.6",
