--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@giscus/react": "^2.3.0",
-    "@sanity/client": "^6.7.0",
     "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.19.3",
@@ -17,20 +16,21 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "8.45.0",
+    "eslint": "^8.45.0",
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.16.0",
-    "next": "^14.1.1",
+    "next": "^14.2.3",
     "next-sanity": "^7.0.4",
     "postcss": "8.4.31",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-github-calendar": "^4.1.5",
     "react-icons": "^4.10.1",
     "sanity": "^3.23.4",
     "sharp": "^0.32.6",
+    "styled-components": "^6.1.11",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@portabletext/react": "^3.0.11",
