--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@giscus/react": "^2.3.0",
     "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/table": "^1.1.2",
     "@sanity/vision": "^3.19.3",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
