--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/table": "^1.1.2",
     "@sanity/vision": "^3.19.3",
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "^8.45.0",
@@ -30,14 +28,16 @@
     "sanity": "^3.23.4",
     "sharp": "^0.32.6",
     "styled-components": "^6.1.11",
-    "tailwindcss": "3.3.3",
-    "typescript": "^5.4.5"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@portabletext/react": "^3.0.11",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
     "@types/refractor": "^3.0.2",
     "@vercel/analytics": "^1.0.1",
     "next-themes": "^0.2.1",
-    "react-refractor": "^2.1.7"
+    "react-refractor": "^2.1.7",
+    "typescript": "5.8.2"
   }
 }
